# universe_best_cuda_practice

./: .gitignore  CMakeLists.txt
1_cuda_reduce_study/: CMakeLists.txt  my_reduce_v0_global_memory.cu  my_reduce_v1_shared_memory.cu  my_reduce_v2_no_divergence_branch.cu  my_reduce_v3_no_bank_conflict.cu  my_reduce_v4_add_during_load_plan_a.cu  my_reduce_v4_add_during_load_plan_b.cu  my_reduce_v5_unroll_last_warp.cu  my_reduce_v6_completely_unroll.cu  my_reduce_v7_multi_add.cu  my_reduce_v8_shuffle.cu
2_cuda_sgemm_study/: CMakeLists.txt  my_sgemm_v0_global_memory.cu  my_sgemm_v1_shared_memory.cu  my_sgemm_v2_shared_memory_sliding_windows.cu  my_sgemm_v3_increase_work_of_per_thread.cu  my_sgemm_v4_using_float4.cu  my_sgemm_v5_register_outer_product.cu  my_sgemm_v6_register_outer_product_float4.cu  my_sgemm_v7_A_smem_transpose.cu  my_sgemm_v8_double_buffer.cu  test.cu
learn/: 新建 Microsoft PowerPoint 演示文稿.pptx
self_practice/: CMakeLists.txt  main.cu  my_reduce_v0_global_memory.cu
