# add_executable(test test.cu)
# target_link_libraries(test PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
# if(CMAKE_BUILD_TYPE STREQUAL "Debug")
#     target_compile_options(test PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G>)
# endif()

add_executable(my_sgemm_v1_shared_memory my_sgemm_v1_shared_memory.cu)
target_link_libraries(my_sgemm_v1_shared_memory PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(my_sgemm_v1_shared_memory PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G>)
endif()

add_executable(my_sgemm_v2_shared_memory_sliding_windows my_sgemm_v2_shared_memory_sliding_windows.cu)
target_link_libraries(my_sgemm_v2_shared_memory_sliding_windows PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(my_sgemm_v2_shared_memory_sliding_windows PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G>)
endif()